--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "js": [
-        "cbl.js",
+        "cbl-js/cbl.js",
         "content.js"
       ],
       "matches": [
